# FLowAnalysis

./: .gitignore  CMakeLists.txt  README.md  VERSION.compiled
analysisformat/: AMDParticle.cc  AMDParticle.hh  CMakeLists.txt  KatanaRoot.cc  KatanaRoot.hh  MassEstimator.h  STAnalysisFormatLinkDef.h  STBDC.cc  STBDC.hh  STBetheBlochFittingFunction.cc  STBetheBlochFittingFunction.hh  STKParticle.cc  STKParticle.hh  STKatana.cc  STKatana.hh  STMassCalSimpleBB.cc  STMassCalculator.cc  STMassCalculator.hh  STMassFunction.cc  STMassFunction.hh  STNeuLANDCluster.cc  STNeuLANDCluster.hh  STNeuLANDHit.cc  STNeuLANDHit.hh  STParticle.cc  STParticle.hh  STRunToBeamA.hh  STTriggerArray.cc  STTriggerArray.hh
cmake/: STLog.cmake
efficiency/: DoFlow.h  ImageProcessing.h  makeup_functions.h  myAnalysis.h  unfoldLCPSpectra.C  unfoldLCPSpectra.h
flowformat/: CMakeLists.txt  STBootStrap.cc  STBootStrap.hh  STFlowAnlaysisLinkDef.h  STFlowCorrection.cc  STFlowCorrection.hh  STFlowInfo.cc  STFlowInfo.hh
macros/: AMDFlw.C  AMDFlw.sh  AsmFlw_getEvents_v2.sh  Assemble_flwv4.C  Assemble_flwv4.h  Assemble_flwv4.sh  BootStrapSim.C  BootStrapTest.C  BootStrapTest.data  Complex.C  DoAna.h  DoAna.sh  DoAna_phys.C  DoFlattening.C  DoFlattening.sh  DoFlow.C  DoFlow.h  DoFlow.sh  DoFlowAnalysis.C  DoFlowAnalysis.h  DoFlowAnalysis.sh  (+119 more)
tasks/: CMakeLists.txt  STAnaTaskManager.cc  STAnaTaskManager.hh  STAnalysisTaskLinkDef.h  STBigRIPSTask.cc  STBigRIPSTask.hh  STFlowTask.cc  STFlowTask.hh  STLorentzBoostVector.hh  STRunAna.cc  STRunAna.hh  STSource.cc  STSource.hh  STSpiRITTPCTask.cc  STSpiRITTPCTask.hh
(+61 files in other folders)
